# stock_fetcher

./: .gitignore  Dockerfile  README.md  buf.gen.yaml  pyproject.toml
.devcontainer/: devcontainer.json
proto/stock/v1/: stock.proto
src/: logger.py  models.py  server.py  stock_fetcher.py
