[tool.poetry]
name = "stock-fetcher"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "src" },
    { include = "stock", from = "gen/python" }
]

[tool.poetry.dependencies]
python = "^3.12"
yfinance = "^0.2.41"
protobuf = "^5.27.3"
grpcio = "^1.65.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclue = [ "gen" ]